--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,11 +4,18 @@
 	<div class="logo">
 	    <%= link_to "mojoleaf", root_path %>
 	</div>
-
-	<ul>
-		<li><a href="#">Sign out</a></li>
-		<li><%= link_to "Your Dashboard", tests_path %></li>
-		
-	</ul>
+	<% if user_signed_in? %>
+		<ul>
+			<li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+			<li><%= link_to "Your Dashboard", tests_path %></li>
+			
+		</ul>
+	<% else %>
+		<ul>
+			<li><%= link_to "Register", new_user_registration_path %></li>
+			<li><%= link_to "Sign in", new_user_session_path %></li>
+			
+		</ul>
+	<% end %>
  
 </nav>
