--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -47,7 +47,7 @@
 
 <div class="next-steps">
 	<h3>What happens next?</h3>
-	<p>When your test ends, the results will be emailed directly to you. </p>
+	<p>When your test ends, we'll let you know. </p>
 	<p>Alternatively, you can see how your test is going at any time from <%= link_to "Your Dashboard", tests_path %>. </p>
 </div>
 
