--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -6,7 +6,7 @@
 		<h2 class="congrats">Your Dashboard</h2>
 	
 	
-		<%= link_to "Add a design", new_test_path, class: "add-secondary-button"%>
+		<%= link_to "Add your design", new_test_path, class: "add-secondary-button"%>
 	</div>
 	
       <% if flash[:success].present? %>
