--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
 	<% if user_signed_in? %>
 		<ul>
 			<li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
-			<li><%= link_to "Your Dashboard", tests_path %></li>
+			<li><%= link_to "Your dashboard", tests_path %></li>
 			
 		</ul>
 	<% else %>
