--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -2,6 +2,12 @@
 
 
 <div class="wrapper">
+		<div class="breadcrumb">
+			<strong>You are in:</strong>
+			<%= link_to "Home", root_path %> &raquo 
+			Your dashboard 
+		</div>
+
 	<div class="dashboard-header group">
 		<h2 class="congrats">Your Dashboard</h2>
 	
