--- a/app/views/test_mailers/test_added.html.erb
+++ b/app/views/test_mailers/test_added.html.erb
@@ -1,1 +1,34 @@
-This is a test for the test added mailer
+Congratulations, your test has been successfully added to mojoleaf.com. This means that anyone who comes to mojoleaf.com will be able to tell you their first impressions of your design.
+
+
+If you chose to do a 'Private Test' make sure you spread the word and let people know you want feedback otherwise no one will know your design is there.
+
+
+Spread The Word:
+
+
+Share your design on Twitter: http://twitter.com/home?status=What+do+you+think+of+my+design%3F-+http://bit.ly/O2xThT
+
+
+Share my design on Facebook: http://www.facebook.com/share.php?u=http://bit.ly/O2xThT
+
+
+Direct Link to your design: http://bit.ly/O2xThT
+
+
+This will be available until 22 Mar 2014 - 18:39 GMT / 14:39 EDT / 11:39 PDT.
+
+
+What happens next?
+
+
+When your test ends the results will be emailed directly to you. By doing it this way you don't have to worry about remembering yet another username and password, the results come directly to you when they're complete.
+
+
+If you have any questions, you can contact us at http://www.mojoleaf.com/index.php#contact
+
+
+The small print:
+
+
+If your design is reported to us as being 'inappropriate' and we agree it will be removed from the site and no results will be provided.
