Fixed Wordcloud and added disabled data

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -21,3 +21,6 @@
 		<%= render "devise/shared/links" %>
 	</div>
 </div>
+ <div class="extra-margin">
+ <%= render partial: 'layouts/footer' %>
+ </div>
