--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -88,3 +88,7 @@
 <p class="no-indent">We'd love to hear any feedback you have about mojoleaf, whether it's how it helped you in the design process or whether there's something you'd like to change. Whatever it is, please don't be shy and <a href ="http://www.hellomike.co.uk/contact-me/" target="_blank">get in touch</a>.</p>
 </div>	
 </div>
+
+ <div class="extra-margin">
+ <%= render partial: 'layouts/footer' %>
+ </div>
