--- a/app/assets/stylesheets/tests.css.scss
+++ b/app/assets/stylesheets/tests.css.scss
@@ -33,6 +33,11 @@ i {
 	width: 80%;
 }
 
+.extra-margin {
+	margin-top: 500px;
+	}
+
+
 h2, h1 {
 	font-size: 1.5em;
 	padding: 20px 0px;
@@ -70,6 +75,11 @@ h2.dashboard {
 
 h2.copy, h1.legal {
 	border: none;
+}
+
+h2 .glance-tagline {
+	font-size: 12px;
+	padding-top: 10px;
 }
 
 
@@ -863,20 +873,30 @@ a.asterix {
 
 /* ------ WORD CLOUD --------*/
 
+testingclout {
+	width: 100%;
+	height: 500px;
+}
+
+
+/* --- Original Word Cloud */
 .wordcloud {
 	
-	height: 800px;
+	/*height: 350px;
 	margin: 10px auto;
 	padding: 0;
 	page-break-after: always;
 	page-break-inside: avoid;
-	width: 700px;
+	width: 700px;*/
+	
+	
 	}
 
 
 .chart {
 	text-align: center;
 	margin: 20px 0px;
+
 }
 
 p.chart-header {
