--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
 		  </div>
 		
 		  <div class="form-actions">
-		    <%= f.button :submit, "Sign up" %>
+		    <%= f.button :submit, "Sign up", data: { disable_with: "Creating your account..."} %>
 		  </div>
 		<% end %>
 		
@@ -31,3 +31,6 @@
 	</div>
 	
 </div>
+ <div class="extra-margin">
+ <%= render partial: 'layouts/footer' %>
+ </div>
