--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -45,21 +45,65 @@
 			</div>
 
 
-	<% unless @bad_stats_count == 0 &&  @good_stats_count == 0 %>
-		<h2>At a glance</h2>
-			<div id="at-a-glance" class="wordcloud">
-						
-					<% @stats.each do |array| %>
+		
 
-						<span data-weight="<%= array[1] %>"><%= array[0].option_name %></span>
 
-					<% end %>
 
-			</div>
+
+	<% unless @bad_stats_count + @good_stats_count <= 20 %>
+		<h2>At a glance<br>
+			<span class = "glance-tagline">Don't like the layout? <a href="javascript:location.reload(true);" class="blue-link">Refresh the word cloud</a></span>
+		</h2>			
+			<script>
+
+			    var frequency_list = [
+			    
+			
+			        	<% @stats.each do |array| %>
+								{"text":"<%= array[0].option_name %>","size":<%= array[1] * 10 %>},
+						<% end %>];
+			    
+			    
+			   ;
+			
+			
+			    var color = d3.scale.linear()
+			            .domain([0,1,2,3,4,5,6,10,15,20,100])
+			            .range(["#ddd", "#ccc", "#bbb", "#aaa", "#999", "#888", "#777", "#666", "#555", "#444", "#333", "#222"]);
+			
+			    d3.layout.cloud().size([900, 500])
+			            .words(frequency_list)
+			            .rotate(0)
+			            .fontSize(function(d) { return d.size; })
+			            .on("end", draw)
+			            .start();
+			
+			    function draw(words) {
+			        d3.select("body .wrapper").append("svg")
+			                .attr("width", 900)
+			                .attr("height", 500)
+			                .attr("class", "wordcloud")
+			                .append("g")
+			                // without the transform, words words would get cutoff to the left and top, they would
+			                // appear outside of the SVG area
+			                .attr("transform", "translate(320,200)")
+			                .selectAll("text")
+			                .data(words)
+			                .enter().append("text")
+			                .style("font-size", function(d) { return d.size + "px"; })
+			                .style("fill", function(d, i) { return color(i); })
+			                .attr("transform", function(d) {
+			                    return "translate(" + [d.x, d.y] + ")rotate(" + d.rotate + ")";
+			                })
+			                .text(function(d) { return d.text; });
+			    }
+			</script>
+			
+
 	<% end %>
 	
 	
-	<h2>In detail</h2>
+	<h2>Full feedback</h2>
 	<div class="chart">
 		<p class="chart-header">
 		<% unless @bad_stats_count == 0 &&  @good_stats_count == 0 %>
@@ -182,28 +226,7 @@
 
 </div>
 
-<script>
-	$(document).ready(function(){
-		$("#at-a-glance").awesomeCloud({
-			"size" : {
-				"grid" : 16,
-				"normalize" : false
-			},
-			"color" : {
-				"start" : "#7f8c8d",
-				"end" : "#34495e"
-			},
-			"options" : {
-				"color" : "gradient",
-				"rotationRatio" : 0,
-				"printMultiplier" : 3,
-				"sort" : "random"
-			},
-			"font" : "sans-serif",
-			"shape" : "square"
-		});
-	});
-</script>
+<%= render partial: 'layouts/footer' %>
 
 <script>
 
