--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -17,10 +17,14 @@
 					
 					
 					<div class="centre">	
-						<%= form.button :submit, "Start getting feedback" %>
+						<%= form.button :submit, "Start getting feedback", data: { disable_with: "Adding your design..." }  %>
 					</div>
 					<% end %>
 		
 		</div>
 
 </div>
+
+ <div class="extra-margin">
+ <%= render partial: 'layouts/footer' %>
+ </div>
