--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -52,26 +52,8 @@
 </div>
 
 
-<!--<%= image_tag @test.image(:large) %>-->
-
-<!--full link to test: <%= link_to request.original_url, new_test_result_path(@test) %>-->
-
-<!--<%= link_to @test.short_url, @test.short_url, target: "_blank" %>-->
-<!-- 
-%A = full name of day
-%e = date
-%B = full month
-%Y = year
-
-at around 
-%l  = hour
-%M = minute
-%p = Am/pm
-%Z = timezone
-
-For time formats: http://www.wetware.co.nz/2009/07/rails-date-formats-strftime/ -->
-
-
-
-
 </div>
+
+ <div class="extra-margin">
+ <%= render partial: 'layouts/footer' %>
+ </div>
