--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -17,7 +17,7 @@
 					
 					
 					<div class="centre">	
-						<%= form.button :submit, "Start getting feedback", data: { disable_with: "Adding your design..." }  %>
+						<%= form.button :submit, "Add your design", data: { disable_with: "Adding your design..." }  %>
 					</div>
 					<% end %>
 		
