Included Paypal Donate on completed tests

--- a/app/assets/stylesheets/tests.css.scss
+++ b/app/assets/stylesheets/tests.css.scss
@@ -437,28 +437,7 @@ nav li a {
 
     }
     
-    
-.button-disabled {
-	background-color: #FFFFFF;
-    border-color: #999999;
-    border-style: solid;
-    border-width: 0;
-    color: #999999;
-    cursor: pointer;
-    font-family: "Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
-    /*font-size: 1rem;*/
-    font-weight: normal;
-    line-height: normal;
-    margin: 0px;
-    padding: 20px 20px;
-    position: relative;
-    text-align: center;
-    text-decoration: none;
-    transition: background-color 300ms ease-out 0s;
-    display: inline-block;
-    text-transform: uppercase;
 
-    }
     
     
 .secondary {
@@ -499,6 +478,10 @@ nav li a {
 	float: left;
 	display: block;
 
+}
+
+.donate {
+	border-color: #85B91E;
 }
 
 .test-listing p {
@@ -902,18 +885,7 @@ testingclout {
 }
 
 
-/* --- Original Word Cloud */
-.wordcloud {
-	
-	/*height: 350px;
-	margin: 10px auto;
-	padding: 0;
-	page-break-after: always;
-	page-break-inside: avoid;
-	width: 700px;*/
-	
-	
-	}
+
 
 
 .chart {
@@ -1080,12 +1052,6 @@ li.footer-last a {border-right: none;}
 		width: 300px !important;
 	}
 	
-	.wordcloud {
-	
-	height: 600px;
-
-	width: 300px;
-	}
 
 
 }
