Customer error page routes added

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -46,8 +46,7 @@
 	<% if @test.end_date < DateTime.now %>
 			<div class="test-index-listing donate">
 					<h3>Help keep Mojoleaf going</h3>
-			<p class="no-indent copy">Although Mojoleaf is free to use, unfortunately it's not free to run.</p> 
-			<p class="no-indent copy">If you've found using Mojoleaf useful, a small donation through Paypal would help to keep it going, we'd really appreciate it.</p>   
+			<p class="no-indent copy">Although Mojoleaf is free to use, unfortunately it's not free to run. If you've found using Mojoleaf useful, a small donation through Paypal would help to keep it going.</p>   
 			
 				<div class="centre">
 					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
