--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -2,11 +2,14 @@
 
 
 <div class = "wrapper">
-<h2 class="congrats thanks">Err...we not sure what you were looking for?</h2>
 
-
-
-
+<div class="error-container-404">
+	<h2 class="error-page">Erm...we're not sure what you're looking for?</h2>
+	
+	<p class="center">Try checking the URL for errors, or maybe the page you're looking for no longer exists.</p>
+	
+	<p class="center"><%= link_to "Homepage", root_path, class: "button"%></p>
+</div>
 
 
 </div>
