--- a/app/assets/stylesheets/tests.css.scss
+++ b/app/assets/stylesheets/tests.css.scss
@@ -62,6 +62,18 @@ h2.thanks {
 	margin-bottom: 50px;
 }
 
+h2.error-page {
+	text-align: center;
+	width: 100%;
+	border: none;
+}
+
+h2.error-page-left {
+	padding-left: 20px;
+	width: 100%;
+	border: none;
+}
+
 .h2-sub {
 	display: block;
 	font-size: 0.8em;
@@ -113,6 +125,12 @@ p {
 	line-height: 16px;
 }
 
+p.center {
+	text-align: center;
+	padding: 0px;
+	margin-bottom: 20px;
+}
+
 p.no-indent {
 	padding-left: 0px;
 }
@@ -139,6 +157,13 @@ ul.bullet li {
 	list-style: disc;
 	margin-left: 60px;
 	line-height: 20px;
+	padding-bottom: 20px;
+}
+
+
+ul.error-list li {
+	list-style: disc;
+	margin-left: 60px;
 	padding-bottom: 20px;
 }
 
@@ -822,6 +847,31 @@ a.pink {
     padding-bottom: 20px;
 
   }
+  
+  
+/* ---- ERRORS: 404 and alike ----  */
+
+
+.error-container-404 {
+    min-height: 650px;
+    background: url(/assets/confusion-face.png) no-repeat center bottom;
+    border-bottom: 10px solid #eee    
+    
+}  
+
+
+.error-container-422 {
+    min-height: 600px;
+    
+} 
+
+
+.error-container-500 {
+    min-height: 600px;
+    background: url(/assets/gremlin.png) no-repeat center bottom;
+    border-bottom: 10px solid #eee;
+    
+} 
 
 /* --- END: Learn Link  ---*/
 
@@ -968,6 +1018,7 @@ table.word-table{
 	display: block;
 	margin-top: 20px;
 }
+
 
 footer {
 	width: 80%;
