Changed 500 error page

--- a/app/assets/stylesheets/tests.css.scss
+++ b/app/assets/stylesheets/tests.css.scss
@@ -303,7 +303,7 @@ nav li a {
 
 
 	.logo {
-	    background: url("/assets/logo.svg") repeat scroll left top #85B91E;
+	    background: url("/assets/logo-leaf.svg") repeat scroll left top #85B91E;
 	    float: left;
 	    height: 60px;
 	    margin: 0;
@@ -840,6 +840,8 @@ p.mojoleaf-header {
 a.pink {
 	background-color: #c9025c;	
 	margin-right: 30px;
+	border-color: #c9025c;
+
 }
 
 .main {	
