--- a/app/views/errors/internal_error.html.erb
+++ b/app/views/errors/internal_error.html.erb
@@ -4,16 +4,16 @@
 <div class = "wrapper">
 
 <div class="error-container-500">
-	<h2 class="error-page-left">Internal Server Error</h2>
 	
-	<p class="copy">This could be because:</p>
+	
+<h2 class="error-page">Those pesky gremlins are at it again!</h2>
+	
+<p class="center">Not sure what happened but we had an <i>Internal Server Error</i> (whatever that means).</p>
 
-<ul class="error-list">
-	<li>It's rush hour for our servers and we can't cope</li>
-	<li>The internet's broken</li>
-	<li>Gremlins are causing havoc with the servers again</li>
-</ul>
-<p class="copy">You could try <a href="javascript:location.reload(true);" class="blue-link">refreshing the page</a>, alternatively head to the <%= link_to "Homepage", root_path, class: "blue-link" %> and go from there.</p>
+<p class="center">You could try <a href="javascript:location.reload(true);" class="blue-link">refreshing the page</a>, alternatively head to the <%= link_to "Homepage", root_path, class: "blue-link" %> and go from there.</p>
+
+	<p class="center"><%= link_to "Homepage", root_path, class: "button"%></p>
+</div> 
 
 </div>
 
@@ -21,7 +21,6 @@
 </div>
 
 <%= render partial: 'layouts/footer' %>
-
 
 
 
