--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -40,7 +40,7 @@
 				<%end%>
 			
 				</br>
-				<%= link_to "Delete this design", test_path(@test), method: :delete, confirm: "Are you sure you want to delete this design?" %></p>
+				<%= link_to "Delete this design", test_path(@test), method: :delete, confirm: "Are you sure you want to delete this design, you'll permanently lose all of your results?" %></p>
 			
 			</div>
 	<% if @test.end_date < DateTime.now %>
