--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -12,7 +12,7 @@
 					
 					
 		
-						<%= form.input :image, label: "Which design would you like feedback on?", input_html: { class: 'grey-background' } %>
+						<%= form.input :image, label: "Which design would you like feedback on (png or jpg)?", input_html: { class: 'grey-background' } %>
 				
 					
 					
