updated email text

--- a/app/views/test_mailers/test_added.html.erb
+++ b/app/views/test_mailers/test_added.html.erb
@@ -6,7 +6,7 @@
 
 <p><strong>Spread The Word:</strong></p>
 
-<p>Send out the short url: <%= @test.short_url %></p>
+<p>Direct link for you to share anyway you see fit: <%= @test.short_url %></p>
 
 <p>Share your design on <a href="http://www.facebook.com/share.php?u=<%= @test.short_url %>" target="_blank">Facebook</a></p>
 
