--- a/app/views/contents/home.html.erb
+++ b/app/views/contents/home.html.erb
@@ -35,7 +35,7 @@
 		
 	<% end %>
 		
-		
+		<%=request.env['HTTP_USER_AGENT']%>
 		
 		<!--<a href ="#" class = "button">View a Demo</a> -->
 	</div>
