--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -12,6 +12,18 @@
 
 		</script>
 
+		<% if flash[:error].present? %>
+		          <div data-alert class="home-flash">
+		            <%= flash[:error] %>
+		          </div>
+		<% end %>
+		
+		<% if flash[:alert].present? %>
+		          <div data-alert class="home-flash">
+		            <%= flash[:alert] %>
+		          </div>
+		<% end %>
+
 <div class="black-body">
 
 	<div class="frame">
