--- a/app/assets/stylesheets/tests.css.scss
+++ b/app/assets/stylesheets/tests.css.scss
@@ -23,6 +23,7 @@ i {
 .wrapper {
 	margin: 0 auto;
 	max-width: 960px;
+	min-width: 900px;
 	width: 80%;
 	padding: 0px 10px;
 }
@@ -281,7 +282,7 @@ nav {
 	margin-bottom: 30px;
 	border-bottom: solid 1px #eee;
 	padding: 0 20px 10px 20px;
-	
+	min-width: 900px;
 	
 }
 
@@ -585,7 +586,7 @@ a.view-results-button {
 	margin-top: 20px;
 	float: left;
 	border-top: solid 1px #eee;
-	padding: 10px;
+	padding: 10px 0px;
 }
 
 .feedback a, .blue-link {
@@ -842,6 +843,7 @@ a.pink {
 	display: table;
     height: 100%;
     width: 100%;
+    min-width: 900px;
 }
 
 
