Page titles added

--- a/app/views/contents/home.html.erb
+++ b/app/views/contents/home.html.erb
@@ -1,3 +1,5 @@
+<% @page_title = 'Get feedback on your design' %>
+
 <% if flash[:error].present? %>
           <div data-alert class="home-flash">
             <%= flash[:error] %>
