--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
+    <title><%= @page_title %> | Mojoleaf</title>
     <%= favicon_link_tag '/favicon.ico' %>
     <%= favicon_link_tag '/touch-icon.png', rel: 'apple-touch-icon', type: 'image/png' %>
     <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
