--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -72,22 +72,18 @@
 			</div>
 				
 </div>
-<!--form.input :chosen_word, collection: ['Appealing', 'Attractive', 'Calm', 'Cheerful', 'Clean', 'Empowering', 'Entertaining', 'Exciting', 'Friendly', 'Fun', 'High Quality', 'Innovative', 'Inspiring', 'Professional', 'Simple', 'Trustworthy'], as: :check_boxes, label: false-->
 
-<!--form.input :chosen_word, collection: ['Boring', 'Busy', 'Cluttered', 'Complex', 'Confusing', 'Dated', 'Dull', 'Hard to use', 'Illogical', 'Intimidating', 'Old', 'Ordinary', 'Overbearing', 'Poor Quality', 'Unattractive', 'Unrefined'], as: :check_boxes, label: false-->
 
-	<!--<script type="text/javascript">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	     $(document).ready(function() {
-    
-	        var $submit = $("#submit_prog").hide(),
-	            $cbs = $('input[name="prog"]').click(function() {
-	                $submit.toggle( $cbs.is(":checked") );
-	            });
-    
-    	});
+  ga('create', 'UA-10454497-2', 'mojoleaf.com');
+  ga('send', 'pageview');
 
-	</script>-->
+</script>
 	
 
 	
