--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,17 @@
     <title><%= @page_title %> | Mojoleaf</title>
     <%= favicon_link_tag '/favicon.ico' %>
     <%= favicon_link_tag '/touch-icon.png', rel: 'apple-touch-icon', type: 'image/png' %>
-    <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
-	<%= javascript_include_tag "jquery.min" %>
-	<%= javascript_include_tag "application" %>
+   
+
+	<%= javascript_include_tag "jquery" %>
+  	<%= javascript_include_tag "jquery_ujs" %>	
+	<%= javascript_include_tag "d3.min" %>
+	<%= javascript_include_tag "d3.layout.cloud" %>
+	<%= javascript_include_tag "Chart.min" %>
+	<%= javascript_include_tag "analytics" %>
+	<%= javascript_include_tag "modernizr.custom" %>
+	
+	
     <%= stylesheet_link_tag    "application" %>
     
     <%= csrf_meta_tags %>
@@ -26,7 +34,13 @@
     
 		  
   </body>
-  <%= javascript_include_tag "application" %>
+
+  
+	<%= javascript_include_tag "demo1"%>
+	<%= javascript_include_tag "classie" %>
+	<%= javascript_include_tag "snap.svg-min" %>
+  
+  
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
