Added ability to scroll overlay

--- a/app/assets/stylesheets/tests.css.scss
+++ b/app/assets/stylesheets/tests.css.scss
@@ -707,6 +707,7 @@ a.view-results-button {
 	transform: translateY(0%) scale(1);
 	-webkit-transition: -webkit-transform 0.4s;
 	transition: transform 0.4s;
+	overflow:scroll;
 }
 
 .overlay-wrapper {
