--- a/app/views/contents/home.html.erb
+++ b/app/views/contents/home.html.erb
@@ -101,7 +101,7 @@
 
 
 
-<div id="footnote group" class="wrapper group">
+<div id="footnote" class="wrapper group">
 	<p class = "footnote no-indent">* <%= @quote.quote_by %></p>
 </div>
 
